# cv_proj2

./: .gitignore  pyproject.toml
exercise1/: ddpm.py  ddpm_train.py  playground.py
exercise1/dataset/: sprites_dataset.py
exercise2/: classifier_eval.py  classifier_train.py  ddpm_eval.py  ddpm_train.py  model.py  sample_cFg.py  sample_cg.py
exercise2/dataset/: sprites_dataset.py
exercise3_new/: main.py
